--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "甲醇个人学习网站"
 description: "人生苦短，pyhton是岸"
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
-locale: zh_TW # 本地化翻譯
+locale: zh_CN # 本地化翻譯
 url:
 feed:
   path: atom.xml
