--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,21 @@
 # Site navigation links
 
-- title: Teaching 教学
-  url: /teaching/
-  excerpt: "含体验式教学及混合式教学"
-  image: learning_teaching.gif
+- title: 网页制作与设计的作品集
+  url: /web/
+  excerpt: 作品回顾
+  image: 放大镜房子.gif
 
-- title: i18nl10n
-  url: /i18nl10n/
-  excerpt: "含＂一带一路＂倡议"
-  image: Tower_of_Babel.jpg
+- title: 网页设计的心得
+  url: /web1/
+  excerpt: 心得体会
+  image: 车车.gif
 
-- title: SDG
-  url: /SDG/
-  excerpt: "可持续发展，含＂生态文明＂倡议"
-  image: 300x200.gif
+- title: 信息可视化的作品集
+  url: /see/
+  excerpt: 吃货的搜罗
+  image: 冰淇淋.gif
 
-- title: Contact 联络我
-  url: /contact/
-  excerpt: "联络我"
-  image: Pigeon_post.jpg
+- title: 信息可视化的心得
+  url: /see1/
+  excerpt: 心得体会
+  image: 旋转的房子.gif
