--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   image: 放大镜房子.gif
 
 - title: web ’s notes
-  url: /posts/rwd/
+  url: /posts/
   excerpt: 心得体会
   image: 车车.gif
 
@@ -16,6 +16,6 @@
   image: 冰淇淋.gif
 
 - title: 信息可视化的心得
-  url: /posts/infovis/
+  url: /posts/
   excerpt: 心得体会
   image: 旋转的房子.gif
