--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ owner:
     ad-client:
     ad-slot:
   bio: "许嘉淳，16网新专业的一条咸鱼"
-  avatar: 头像.jpg # 160x160 px image for author byline
+  avatar: foot.jpg # 160x160 px image for author byline
   disqus-shortname:
 
 
